--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -17,4 +17,119 @@ th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
+}
+
+
+/************************************
+
+TIMER 
+
+*/
+
+
+.timer {
+  position: relative;
+  margin-top:1rem;
+  border-radius: 1rem;
+  background-color:#121212;
+  color:#f0f0f0;
+  padding:1.5rem 2.5rem;
+  filter: drop-shadow(0px 0px 10px rgba(0,0,0,.5));
+}
+
+
+/*
+    Header
+*/
+
+.header {
+  display:flex;
+  justify-content: space-between;
+  align-items:center;
+  margin-right:-1rem;
+}
+
+.header h2 {
+  font-size:1.5rem;
+  font-weight:normal;
+  margin:0; 
+  padding:0;
+  opacity:0.65;
+}
+
+
+.screen {
+  display:relative;
+}
+
+
+/************************************
+
+Buttons 
+
+*/
+
+button  {
+  font-size: 1rem;
+  padding: 0.5rem 0.5rem;
+  color:#fff;
+  background-color: transparent;
+  border:none;
+  border-radius: 2rem;
+}
+
+button svg {
+  fill:rgba(83, 240, 234, 0.75);
+  opacity:0.68;
+}
+
+
+button:hover svg {
+  fill:rgba(83, 240, 234, 1);
+  opacity:1;
+}
+
+
+button:active {
+  background-color:rgba(83, 240, 234, 0.25);
+}
+
+
+button[disabled]:hover, 
+button[disabled]:active {
+  background-color: transparent;
+}
+
+button[disabled] svg,
+button[disabled]:hover svg,
+button[disabled]:active svg {
+  fill:rgba(255, 255, 255, 0.35);
+} 
+
+/*
+    Settings Form
+*/
+
+div.settings {
+  top:4rem;
+  left:0;
+  height:100%;
+  width:100%;
+  background-color:rgba(18, 18, 18, 0.89);
+}
+
+
+/*
+    Actions Bar
+*/
+
+
+.controls {
+  display:flex;
+  flex:1;
+  justify-content:center;
+  align-items:center;
+  gap:1rem;
+  padding-top:0.5rem;
+
 }
